@@ -3,7 +3,7 @@
 /////////////////////////////////////////////////////////////////////////
 //
 //  Copyright (C) 2009-2016  Benjamin D Lunt (fys [at] fysnet [dot] net)
-//                2009-2016  The Bochs Project
+//                2009-2017  The Bochs Project
 //
 //  This library is free software; you can redistribute it and/or
 //  modify it under the terms of the GNU Lesser General Public
@@ -40,9 +40,13 @@ private:
   struct {
     Bit8u printer_status;
     const char *fname;
+    bx_list_c *config;
     FILE *fp;
     char info_txt[BX_PATHNAME_LEN];
   } s;
+
+  static const char* printfile_handler(bx_param_string_c *param, int set,
+                                       const char *oldval, const char *val, int maxlen);
 };
 
 #endif
